fix overflow

--- a/src/Attribution/Attribution.css
+++ b/src/Attribution/Attribution.css
@@ -2,7 +2,7 @@
   font-size: 1em;
   background-color: #a29bfe;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   color: #fff;
   padding-top: 50px;
 }
